# sf_datalake

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  LICENSE  MANIFEST.in  README.md  conf_small.py  convert_to_orc.py  main.py  make_monthly_indics.py  make_yearly_indics.py  pyproject.toml  setup.cfg  utils.py
.ci/datalake/: datalake_config_template.par  maacdo_version.json  spark_config.json
datasets_handling/: aggregate_to_siren.py  join_datasets.py  join_sf_dgfip.py  make_monthly_indics.py  make_yearly_indics.py  monthly_dgfip_dataset.py  rar_dataset.py  sf_preprocessing.py  time_series_computations.py  tva_dataset.py  yearly_dgfip_dataset.py
doc/source/: conf.py  index.rst
docker/: Dockerfile  build.sh
docs/: README.md
docs/source/: conf.py
scripts/: logreg_model.py  make_yearly_indics.py
sf_datalake/: utils.py
sf_datalake/config/: base.py
sf_datalake/postprocessing/: evaluation.py
sf_datalake/preprocessing/: __init__.py  exploration.py  feature_engineering.py  make_monthly_indics.py  make_yearly_indics.py
sf_datalake/processing/: logreg_model.py  transformers.py
src/sf_datalake/: __init__.py  __main__.py  alert.py  config.py  evaluation.py  explain.py  exploration.py  generate_frontend_document.py  io.py  main.py  model.py  model_selection.py  predictions.py  preprocessor.py  sampler.py  transform.py  transformer.py  utils.py
src/sf_datalake/config/: __init__.py  base.json  base.py  covid19_adapt.json  ohe_paydex.json  standard.json  std_scaled_paydex.json
src/sf_datalake/config/parameters/: covid19_adapt.json  standard.json
src/sf_datalake/config/variables/: aggregation.json  covid19_adapt.json  ohe_paydex.json  standard.json  std_scaled_paydex.json  time_series.json
src/sf_datalake/configs/: config_base.json
src/sf_datalake/configuration/: __init__.py  ohe_paydex.json  standard.json  tree-based.json  tree-based_financial-yearly-lags.json  tree-based_waterfall.json  tree-temp-based.json
src/sf_datalake/postprocessing/: evaluate_list.py  evaluation.py  generate_frontend_document.py  micro_macro_link.py
src/sf_datalake/preprocessing/: __init__.py  altares_preprocessing.py  exploration.py  extract_altares_data.py  extract_ap_data.py  extract_cotisation_urssaf.py  extract_debit_urssaf.py  extract_financial_DGFiP.py  extract_judgment_DGFiP_data.py  extract_judgment_URSSAF_data.py  extract_judgment_data.py  extract_sirene_categorical.py  extract_sirene_dates.py  feature_engineering.py  join_datasets.py  make_monthly_indics.py  make_yearly_indics.py  post_join_processing.py  preprocess_ap_file.py  sf_preprocessing.py  sirene_activity.py  yearly_dgfip_dataset.py
src/sf_datalake/processing/: logreg_model.py  transform.py  write_data_to_csv.py
src/sf_datalake/tailoring/: compute_siret_unemployment_n_days.py  evaluate_financial_statements.py
tests/: conftest.py  test_model_selection.py  test_train_test_split.py  test_transform.py  test_utils.py
utils/: evaluation.py  exploration.py  feature_engineering.py
