[build-system]
requires = ["setuptools >= 40.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
known_third_party = ["pyspark"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

volumes = ["/packages", "/home/gitlab-runner/.ci-python_packages:/packages"]