[metadata]
name = sf_datalake
version = 2022.1.dev1
author = Signaux Faibles
author_email = contact@signaux-faibles.beta.gouv.fr
description = The data science codebase for the Signaux Faibles project.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://forge.dgfip.finances.rie.gouv.fr/dge/signaux-faibles/sf_datalake.git
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find_namespace:
package_dir =
    =src
install_requires=
    sklearn
    pandas
    pylint
    pre-commit
    venv-pack
include_package_data = True

[options.extras_require]
test = pytest; pyspark==2.3.1
docs = Sphinx; sphinx-rtd-theme

[options.packages.find]
where=src
