[metadata]
name = sf_datalake
version = 2023.5.dev1
author = Signaux Faibles
author_email = contact@signaux-faibles.beta.gouv.fr
description = The data science codebase for the Signaux Faibles project.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://forge.dgfip.finances.rie.gouv.fr/dge/signaux-faibles/sf_datalake.git
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find_namespace:
package_dir =
    =src
install_requires=
    dataclasses==0.8
    numpy==1.12.1
    scipy==1.2.3
    pandas==0.24.2
    scikit-learn==0.22.2.post1
    shap==0.35
    pylint
    pre-commit
include_package_data = True

[options.extras_require]
pack = venv-pack
test = pytest; pyspark==2.3.1
docs = Sphinx; sphinx-rtd-theme

[options.packages.find]
where=src
